--- a/AppService/App.Domain.AppServices.csproj
+++ b/AppService/App.Domain.AppServices.csproj
@@ -7,8 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Product\" />
     <Folder Include="User\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Core\App.Domain.Core.csproj" />
+    <ProjectReference Include="..\Service\App.Domain.Services.csproj" />
   </ItemGroup>
 
 </Project>
