--- a/Service/App.Domain.Services.csproj
+++ b/Service/App.Domain.Services.csproj
@@ -7,8 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Product\" />
     <Folder Include="User\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Core\App.Domain.Core.csproj" />
   </ItemGroup>
 
 </Project>
