--- a/Core/App.Domain.Core.csproj
+++ b/Core/App.Domain.Core.csproj
@@ -7,11 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="User\Contract\AppServices\" />
-    <Folder Include="User\Contract\Repositories\" />
-    <Folder Include="User\Contract\Services\" />
-    <Folder Include="User\Dtos\" />
-    <Folder Include="User\Entities\" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="7.0.11" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.11">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
 </Project>
