--- a/App.Endpoint.API/appsettings.json
+++ b/App.Endpoint.API/appsettings.json
@@ -5,5 +5,58 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "NLog": {
+    "internalLogLevel": "Info",
+    "internalLogFile": "E:\\log\\internal-nlog.txt",
+    "extensions": [
+      { "assembly": "NLog.Extensions.Logging" },
+      { "assembly": "NLog.Web.AspNetCore" }
+    ],
+    "targets": {
+      "seq": {
+        "type": "BufferingWrapper",
+        "bufferSize": 200,
+        "flushTimeout": 2000,
+        "slidingTimeout": false,
+        "target": {
+          "type": "Seq",
+          "serverUrl": "http://localhost:5341",
+          "apiKey": "",
+          "properties": [
+            {
+              "name": "Source",
+              "value": "${Logger}"
+            },
+            {
+              "name": "ThreadId",
+              "value": "${ThreadId}",
+              "as": "number"
+            },
+            {
+              "name": "MachineName",
+              "value": "${MachineName}"
+            }
+          ]
+        }
+      }
+    },
+    "rules": [
+      {
+        "logger": "*",
+        "minLevel": "Trace",
+        "writeTo": "allfile"
+      },
+      {
+        "logger": "Microsoft.*",
+        "maxLevel": "Info",
+        "final": "true"
+      },
+      {
+        "logger": "*",
+        "minLevel": "Trace",
+        "writeTo": "ownFile-web"
+      }
+    ]
+  }
 }
